--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "createfileidea",
   "version": "1.0.0",
@@ -12,6 +11,7 @@
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1"
   },
   "devDependencies": {
