Added fetch ticket info to form

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-HSE_PROD_URL="https://www.google.com"
+HSE_PROD_URL="https://www.hseconnect.co.nz/login"
 HSE_PROD_SUPERUSER_LOGIN="hse admin lancom"
 HSE_PROD_SUPERUSER_PW="ssH0P+la]{T3-8iU"
 
